community-modules/core/src/styles/ag-grid.scss
/* ... */
.ag-full-width-row {
    overflow: hidden;
    // turn events back on, as we removed them in the parent
    pointer-events: all;
}

.ag-row-inline-editing {
    z-index: 1;
}

.ag-row-dragging {
    z-index: 2;
}

.ag-stub-cell {
    display: flex;
    align-items: center;
}

/**
 ****************************
 * Cells
 ****************************
*/
.ag-cell {
    display: inline-block;
    position: absolute;
    white-space: nowrap;
}

.ag-cell-value, .ag-group-value {
    overflow: hidden;
    text-overflow: ellipsis;
}

.ag-cell-wrapper {
    display: flex;
    align-items: center;
    width: 100%;
    height: 100%;
}

.ag-cell-auto-height {
    height: 100%;
}

.ag-cell-inline-editing {
    z-index: 1;
    .ag-cell-edit-input, .ag-input-wrapper {
        height: 100%;
        width: 100%;
        line-height: normal;
    }
}

/**
 ****************************
 * Filters
 ****************************
*/
.ag-set-filter-item {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    display: flex;
    align-items: center;
}

.ag-set-filter-item-value {
    display: flex;
}

.ag-set-filter-item-checkbox {
    display: flex;

    // for focus reasons, we need this for IE, otherwise for the set filter, the 'selectAll' click doesn't work
    // when you click on it when the quick filter has focus. this was a fix for AG-2258
    pointer-events: none;
}

.ag-filter-body-wrapper {
    display: flex;
    flex-direction: column;
}

.ag-filter-filter {
    flex: 1 1 auto;
}

/**
 ****************************
 * Floating Filter
 ****************************
*/

.ag-floating-filter-body {
    display: flex;
    flex: 1 1 auto;
    height: 100%;
}

.ag-floating-filter-full-body {
    display: flex;
    flex: 1 1 auto;
    height: 100%;
    width: 100%;
}

.ag-floating-filter {
    display: inline-block;
    position: absolute;
}

.ag-floating-filter-input {
    width: 100%;
}

.ag-floating-filter-input:read-only {
    // TODO visual styles
    background-color: #eee;
}

.ag-floating-filter-button {
    display: flex;
    flex: none;
}

/**
 ****************************
 * Drag & Drop
 ****************************
*/

// the ghost header cell doesn't live inside the grid, it's parent is the body element,
// so we cannot style using standard themes. hence we break the rules, and style it here
.ag-dnd-ghost {
    display: flex;
    align-items: center;
    cursor: move;
    // TODO visual styles
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 14px;
    overflow: hidden;
    padding: 3px;
    position: absolute;
    text-overflow: ellipsis;
    user-select: none;
    z-index: 10;
}

// TODO visual styles
.ag-dnd-ghost-icon {
    padding: 2px;
}


/**
 ****************************
 * Overlay
 ****************************
*/
.ag-overlay {
    height: 100%;
    left: 0;
    pointer-events: none;
    position: absolute;
    top: 0;
    width: 100%;
}

.ag-overlay-panel {
    display: flex;
    height: 100%;
    pointer-events: none;
    width: 100%;
}

.ag-overlay-wrapper {
    display: flex;
    flex: none;
    width: 100%;
    height: 100%;
    align-items: center;
    justify-content: center;
    text-align: center;
    // TODO required?
    &.ag-overlay-loading-wrapper {
        pointer-events: all;
    }
}

// for when auto height is used but there is no row data
.ag-overlay-no-rows-wrapper.ag-layout-auto-height {
    padding-top: 30px;
}

/**
 ****************************
 * Popup
 ****************************
*/
.ag-popup-child {
    z-index: 5;
}

.ag-popup-editor {
    position: absolute;
    user-select: none;
    z-index: 1;
}

/**
 ****************************
 * Virtual Lists
 ****************************
*/
.ag-virtual-list-item {
    position: absolute;
    width: 100%;
}

/**
 ****************************
 * Floating Top and Bottom
 ****************************
*/
.ag-floating-top {
    overflow: hidden;
    white-space: nowrap;
    width: 100%;
    position: relative;
    display: flex;
}

.ag-pinned-left-floating-top {
    display: inline-block;
    overflow: hidden;
    position: relative;
    min-width: 0px;
}

.ag-pinned-right-floating-top {
    display: inline-block;
    overflow: hidden;
    position: relative;
    min-width: 0px;
}

.ag-floating-bottom {
    overflow: hidden;
    white-space: nowrap;
    width: 100%;
    position: relative;
    display: flex;
}

.ag-pinned-left-floating-bottom {
    display: inline-block;
    overflow: hidden;
    position: relative;
    min-width: 0px;
}

.ag-pinned-right-floating-bottom {
    display: inline-block;
    overflow: hidden;
    position: relative;
    min-width: 0px;
}


/**
 ****************************
 * Dialog
 ****************************
*/

$ag-handleSize: 5px;

.ag-dialog, .ag-panel {
    display: flex;
    flex-direction: column;
    position: relative;
    overflow: hidden;
}

.ag-panel-title-bar {
    display: flex;
    flex: none;
    align-items: center;
    cursor: default;
}

.ag-panel-title-bar-title {
    flex: 1 1 auto;
}

.ag-panel-title-bar-buttons {
    display: flex;
}

.ag-panel-title-bar-button {
    cursor: pointer;
}

.ag-panel-content-wrapper {
    display: flex;
    flex: 1 1 auto;
    position: relative;
    overflow: hidden;
}

.ag-dialog {
    position: absolute;
}
/* ... */

